fix message issue on small screens

--- a/style.css
+++ b/style.css
@@ -45,9 +45,14 @@ h3 {
     max-width: 600px;
     margin: 0 auto;
     box-shadow: 0 0 20px var(--dark-gray-clr);
-    min-height: 800px;
+    min-height: 100vh;
     overflow: hidden;
     position: relative;
+}
+@media (max-width: 600px) {
+    .app {
+        min-height: 600px;
+    }
 }
 /* the app header container  */
 .app__header {
